--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -1,5 +1,4 @@
 @import "Step/Step";
-@import "Link/Link";
 @import "Arrows/Arrows";
 
 .stepper {
@@ -9,12 +8,19 @@
   &-container {
     width: 100%;
     max-height: 100%;
-    padding: 5px 20px;
+    padding: 5px 0;
     display: grid;
     position: relative;
     grid-template-columns: repeat(auto-fit, minmax(1px, 1fr));
 
     transition: right 200ms ease;
+  }
+
+  &-item {
+    //hide the first & the last step-line
+    &:first-child .step-container .step-item:first-child, &:last-child .step-container .step-item:last-child {
+      visibility: hidden;
+    }
   }
 
   &-counter {
