--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -1,13 +1,10 @@
 .step {
   &-container {
     width: 100%;
-    //height: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: start;
+    justify-content: space-evenly;
     align-items: center;
-    position: relative;
-
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
 
@@ -22,13 +19,52 @@
     }
   }
 
+  &-item {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+
+    &.--line {
+      flex-grow: 1;
+      height: 2rem;
+      justify-content: center;
+      align-self: start;
+    }
+
+    &.--body {
+      padding: 0 0.325rem;
+      flex-shrink: 1;
+    }
+  }
+
+  &-line {
+    width: 100%;
+    background-color: var(--link);
+    opacity: 0.2;
+    border-radius: 3px;
+    height: 1px;
+    transition: opacity 300ms;
+  }
+
+  //&-body {
+  //  display: flex;
+  //  flex-direction: column;
+  //  justify-content: start;
+  //  align-items: center;
+  //  position: relative;
+  //}
+
   &-circle {
     background-color: transparent;
     opacity: 0.25;
     border-radius: 50%;
     border: 2px solid var(--circle);
 
-    width: 40%;
+    width: 2rem;
+    height: 2rem;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -37,11 +73,11 @@
     transition: background-color 200ms ease, box-shadow 400ms ease, opacity 400ms ease;
 
     //for rectangle proportions
-    &::after {
-      content: "";
-      display: block;
-      padding-bottom: 100%;
-    }
+    //&::after {
+    //  content: "";
+    //  display: block;
+    //  padding-bottom: 100%;
+    //}
   }
 
   &-icon {
@@ -51,8 +87,8 @@
   }
 
   &-label {
-    width: max-content;
-    max-width: 150%;
+    //width: max-content;
+    max-width: 100%;
     text-align: center;
     font-size: smaller;
     padding-top: 8px;
@@ -74,6 +110,12 @@
 }
 
 .--selected {
+  .step-line {
+    &.--before {
+      opacity: 1;
+    }
+  }
+
   .step-circle {
     opacity: 1;
     box-shadow: 0 0 0 2px var(--circle);
@@ -84,11 +126,12 @@
   }
 
   .step-label {
-    font-weight: bold;
+    //instead of *bold* for not to resize the element
+    text-shadow: -0.06ex 0 black, 0.06ex 0 black;
   }
 
   .step-sublabel {
-    font-weight: bold;
+    text-shadow: -0.06ex 0 black, 0.06ex 0 black;
   }
 
   &.--disabled .step-circle {
@@ -97,6 +140,12 @@
 }
 
 .--before-selected {
+  .step-line {
+    &.--before, &.--after {
+      opacity: 1;
+    }
+  }
+
   .step-circle {
     opacity: 1;
   }
