--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -1,7 +1,6 @@
 .step {
   &-container {
-    //width: 200px;
-
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -50,14 +49,6 @@
     transition: opacity 300ms;
   }
 
-  //&-body {
-  //  display: flex;
-  //  flex-direction: column;
-  //  justify-content: start;
-  //  align-items: center;
-  //  position: relative;
-  //}
-
   &-circle {
     background-color: transparent;
     opacity: 0.25;
@@ -72,13 +63,6 @@
     justify-content: center;
 
     transition: background-color 200ms ease, box-shadow 400ms ease, opacity 400ms ease;
-
-    //for rectangle proportions
-    //&::after {
-    //  content: "";
-    //  display: block;
-    //  padding-bottom: 100%;
-    //}
   }
 
   &-icon {
@@ -91,7 +75,7 @@
     //width: max-content;
     max-width: 100%;
     text-align: center;
-    font-size: smaller;
+    font-size: 1rem;
     padding-top: 8px;
 
     display: flex;
@@ -105,7 +89,7 @@
   }
 
   &-sublabel {
-    font-size: x-small;
+    font-size: 0.75rem;
     font-weight: lighter;
   }
 }
