--- a/src/Stepper/Stepper.scss
+++ b/src/Stepper/Stepper.scss
@@ -1,28 +1,15 @@
 @import "Step/Step";
-@import "Arrows/Arrows";
 
 .stepper {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-
-  &-wrapper {
-    overflow: hidden;
-    margin: 0 auto;
-  }
-
   &-container {
-    width: 100%;
-    max-height: 100%;
-    padding: 5px 0;
-    display: flex;
     position: relative;
-
-    transition: right 200ms ease;
+    display: flex;
+    justify-content: space-between;
   }
 
   &-item {
-    width: 200px;
+    min-width: 200px;
+    flex: 1 1 0;
 
     //hide first & last step-line
     &:first-child .step-container .step-item:first-child, &:last-child .step-container .step-item:last-child {
@@ -34,7 +21,7 @@
     width: max-content;
     margin: 0 auto;
 
-    font-size: x-small;
+    font-size: 0.75rem;
 
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -42,8 +29,65 @@
   }
 }
 
+.steps {
+  width: 100%;
+  max-height: 100%;
+  padding: 5px 0;
+  display: flex;
+  position: relative;
+
+  transition: right 200ms ease;
+
+  &-wrapper {
+    overflow: hidden;
+    margin: 0 auto;
+  }
+}
+
+.arrow {
+  height: 100%;
+  padding: 5px 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &-left {
+    left: 0;
+  }
+
+  &-right {
+    right: 0;
+  }
+
+  &-icon {
+    cursor: pointer;
+    border-radius: 25%;
+    position: relative;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    padding: 5px;
+
+    &:hover {
+      &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+
+        background-color: var(--link);
+        opacity: 0.25;
+      }
+    }
+  }
+}
+
 .--vertical {
-  &.stepper-container {
+  .steps {
     height: 100%;
     display: flex;
     flex-direction: column;
