--- a/lib/Stepper/Step/Step.scss
+++ b/lib/Stepper/Step/Step.scss
@@ -69,6 +69,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    height: 100%;
   }
 
   &-label {
