--- a/lib/Stepper/Step/Step.scss
+++ b/lib/Stepper/Step/Step.scss
@@ -1,8 +1,9 @@
 .step {
   &-container {
     width: 100%;
-    height: 100%;
+    //height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     cursor: pointer;
@@ -19,62 +20,18 @@
     }
   }
 
-  &-item {
+  &-body {
+    height: 40%;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+    flex-direction: row;
 
-    &.--line {
-      flex: 1 1 0;
-      height: 2rem;
-      justify-content: center;
-      align-self: start;
-    }
-
-    &.--body {
-      flex: 2 1 0;
-      padding: 0 0.325rem;
-    }
-  }
-
-  &-line {
-    width: 100%;
-    background-color: var(--link);
-    opacity: 0.2;
-    border-radius: 3px;
-    height: 1px;
-    transition: opacity 300ms;
-  }
-
-  &-circle {
-    background-color: transparent;
-    opacity: 0.25;
-    border-radius: 50%;
-    border: 2px solid var(--circle);
-
-    width: 2rem;
-    height: 2rem;
-    margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: center;
-
-    transition: background-color 200ms ease, box-shadow 400ms ease, opacity 400ms ease;
-  }
-
-  &-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+    justify-content: space-between;
   }
 
   &-label {
-    //width: max-content;
+    height: 60%;
     max-width: 100%;
     text-align: center;
     font-size: 1rem;
@@ -94,6 +51,44 @@
     font-size: 0.75rem;
     font-weight: lighter;
   }
+
+  &-line {
+    flex: 1 1 0;
+    width: 100%;
+    background-color: var(--link);
+    opacity: 0.2;
+    border-radius: 3px;
+    height: 1px;
+    transition: opacity 300ms;
+  }
+
+  &-circle {
+    //flex: 1 1 auto;
+    background-color: transparent;
+    opacity: 0.25;
+    border-radius: 50%;
+    border: 2px solid var(--circle);
+
+    //padding: 0 0.325rem;
+    width: 2rem;
+    height: 2rem;
+    margin: 0 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transition: background-color 200ms ease, box-shadow 400ms ease, opacity 400ms ease;
+  }
+
+  &-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
+
 }
 
 .--selected {
