--- a/src/Stepper/Stepper.scss
+++ b/src/Stepper/Stepper.scss
@@ -5,14 +5,17 @@
     position: relative;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    //height: 100%;
   }
 
   &-item {
+    //height: 100%;
     min-width: 200px;
     flex: 1 1 0;
 
     //hide first & last step-line
-    &:first-child .step-container .step-item:first-child, &:last-child .step-container .step-item:last-child {
+    &:first-child .step-line:first-child, &:last-child .step-line:last-child {
       visibility: hidden;
     }
   }
@@ -31,6 +34,7 @@
 
 .steps {
   width: 100%;
+  //height: 100%;
   max-height: 100%;
   padding: 5px 0;
   display: flex;
@@ -41,6 +45,7 @@
   &-wrapper {
     overflow: hidden;
     margin: 0 auto;
+    max-width: 100%;
   }
 }
 
@@ -61,6 +66,7 @@
   }
 
   &-icon {
+    height: 100%;
     cursor: pointer;
     border-radius: 25%;
     position: relative;
