--- a/lib/Stepper/Stepper.scss
+++ b/lib/Stepper/Stepper.scss
@@ -4,14 +4,15 @@
   height: 100%;
 
   &-container {
+    width: 100%;
+    height: 90%;
     position: relative;
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    height: 100%;
   }
 
   &-counter {
+    height: 10%;
     width: max-content;
     margin: 0 auto;
 
@@ -102,12 +103,11 @@
     height: 100%;
 
     &-container {
-      height: 90%;
       flex-direction: column;
     }
 
     &-counter {
-      height: 10%;
+      padding-top: 5px;
     }
   }
 
