--- a/src/Input/styles.scss
+++ b/src/Input/styles.scss
@@ -5,6 +5,7 @@
   padding: 0.5rem 1rem;
   font-size: 0.95rem;
   line-height: 1.5;
+  margin: 0;
   color: #495057;
   background-color: #fff;
   border: 1px solid #becad6;
