--- a/lib/Alert/styles.scss
+++ b/lib/Alert/styles.scss
@@ -3,17 +3,41 @@
   border-radius: 1rem;
   display: grid;
   grid-gap: 10px;
-  height: 50px;
+  height: 3.5rem;
   text-align: left;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+
   overflow: hidden;
   margin: 0.5rem;
   padding: 0.5rem;
 
-  grid-template-columns: max-content 1fr max-content;
+  max-width: 100%;
+  grid-template-columns: 24px 1fr max-content;
+}
+
+.swf-button{
+  //margin: 0 !important;
+  height: fit-content;
+}
+
+.alert-text{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  //white-space: nowrap;
+}
+
+.alert-content{
+  width: 100%;
+  display: inline-block;
+  overflow: hidden;
 }
 
 .alert-header{
   font-weight: bold;
+}
+
+.alert-icon{
+  margin: auto;
 }
