--- a/lib/Input/styles.scss
+++ b/lib/Input/styles.scss
@@ -154,9 +154,10 @@ label.--invalid {
 
   .--invalid{
     border-color: red;
- //   box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
   }
 }
+
 .form-control:focus {
   color: #495057;
   background-color: #fff;
@@ -165,14 +166,15 @@ label.--invalid {
 
   &.--invalid{
     border-color: red;
-  //  box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
   }
 }
+
 .form-control:hover {
   border-color: #8fa4b8;
   &.--invalid{
     border-color: red;
-   // box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
+    box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
   }
 }
 
