--- a/src/Alert/_alert.scss
+++ b/src/Alert/_alert.scss
@@ -13,7 +13,7 @@
   max-width: 100%;
   grid-template-columns: 24px 1fr max-content;
 
-  swf-button{
+  .swf-button{
     //margin: 0 !important;
     height: fit-content;
   }
@@ -41,5 +41,3 @@
     margin: auto;
   }
 }
-
-.
