--- a/src/Dropdown/_dropdown.scss
+++ b/src/Dropdown/_dropdown.scss
@@ -84,6 +84,10 @@
         color: rgba(16, 16, 16, 0.3);
         background: white;
       }
+
+      &.selected{
+        color: rgb(30, 133, 109);
+      }
     }
 
     .dropdown-item:hover {
