--- a/src/Input/_input.scss
+++ b/src/Input/_input.scss
@@ -2,7 +2,7 @@
   position: relative;
 
   label.inp-label {
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
     font-size: 1rem;
     font-weight: 300;
     color: #5a6169;
@@ -10,10 +10,10 @@
     top: 0;
     left: 0;
     z-index: 1;
-    transform: translate(10px,5px) scale(1);
+    transform: translate(10px, 5px) scale(1);
     background: #fff;
     padding: 4px;
-    transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms, transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
   }
 
   label.--moved {
@@ -46,8 +46,7 @@
   }
 
   .form-control--start,
-  .form-control--end
-  {
+  .form-control--end {
     border: 1px solid #becad6;
     text-align: center;
     display: flex;
@@ -73,11 +72,11 @@
 
   }
 
-  .form-control--end.--invalid{
+  .form-control--end.--invalid {
     border-color: red;
   }
 
-  .form-control--start.--invalid{
+  .form-control--start.--invalid {
     border-color: red;
   }
 
@@ -118,7 +117,7 @@
 
   }
 
-  .form-control.--invalid{
+  .form-control.--invalid {
     border-color: red;
     box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
   }
@@ -151,7 +150,7 @@
     box-shadow: none;
     transition: box-shadow 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06), border 250ms cubic-bezier(0.27, 0.01, 0.38, 0.06);
 
-    .--invalid{
+    .--invalid {
       border-color: red;
       box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
     }
@@ -163,7 +162,7 @@
     border-color: #007bff;
     box-shadow: 0 0.313rem 0.719rem rgba(0, 123, 255, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
 
-    &.--invalid{
+    &.--invalid {
       border-color: red;
       box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
     }
@@ -171,7 +170,8 @@
 
   .form-control:hover {
     border-color: #8fa4b8;
-    &.--invalid{
+
+    &.--invalid {
       border-color: red;
       box-shadow: 0 0.313rem 0.719rem rgba(255, 123, 0, 0.1), 0 0.156rem 0.125rem rgba(0, 0, 0, 0.06);
     }
