--- a/lib/Popover/_popover.scss
+++ b/lib/Popover/_popover.scss
@@ -18,6 +18,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  padding: 8px;
 
   background: var(--popover-background);
   z-index: 800;
@@ -68,7 +69,7 @@
 
 .popover-content-keeper{
   margin: 0;
-  padding: 8px;
+  padding: 0;
   overflow: auto;
 }
 
