--- a/lib/Dropdown/_dropdown.scss
+++ b/lib/Dropdown/_dropdown.scss
@@ -82,7 +82,7 @@
 
       &.disabled {
         color: rgba(16, 16, 16, 0.3);
-        background: white;
+        background: transparent;
       }
     }
 
