--- a/src/Stepper/_stepper.scss
+++ b/src/Stepper/_stepper.scss
@@ -86,14 +86,14 @@
 
     &:hover {
       &::after {
-        content: '';
+        content: "";
         display: block;
         position: absolute;
-        width: 100%;
-        height: 100%;
-
+        width: 80%;
+        height: 80%;
         background-color: var(--link-color);
-        opacity: 0.25;
+        opacity: .25;
+        border-radius: 50%;
       }
     }
   }
