--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -29,17 +29,12 @@
   &-label {
     max-width: 100%;
     text-align: center;
-    font-size: 1rem;
+    font-size: .8rem;
     padding-top: 8px;
-
     display: flex;
     flex-direction: column;
-
     color: var(--label-color);
-
     -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
   }
 
   &-sublabel {
