--- a/src/Stepper/Step/Step.scss
+++ b/src/Stepper/Step/Step.scss
@@ -27,6 +27,8 @@
   }
 
   &-label {
+    position: absolute;
+    bottom: -20px;
     max-width: 100%;
     text-align: center;
     font-size: .8rem;
