--- a/lib/Modal/_modal.scss
+++ b/lib/Modal/_modal.scss
@@ -111,14 +111,14 @@
       grid-template-areas:
             ". main-buttons"
             "header-content additional-buttons";
-      grid-template-rows: 3.5rem;
+      grid-template-rows: 1.5rem;
     }
 
     &.--desktop-content {
       grid-template-areas:
             ". main-buttons"
             "header-content header-content";
-      grid-template-rows: 3.5rem;
+      grid-template-rows: 1.5rem;
     }
 
     &.--mobile {
@@ -155,6 +155,7 @@
       grid-area: header-content;
       width: 100%;
       overflow: auto;
+      padding: 1rem;
     }
 
     &.--mobile > .header-content {
