--- a/src/Modal/_modal.scss
+++ b/src/Modal/_modal.scss
@@ -95,8 +95,10 @@
         padding: calc(.5rem * var(--mv9-Tvprj--8tAf8z-1Jrjt, 1)) calc(.5rem * var(--mv9-Tvprj--9Apz8-1Jrjt, 1));
       }
       &-desktop {
-        width: 100%;
-        height: 100%;
+        width: 105%;
+        height: 105%;
+        border-radius: 0;
+        border-color: #ffff;
       }
     }
 
